# llobot

./: .gitignore  CONTRIBUTING.md  COPYRIGHT  Containerfile  README.md  pyproject.toml  requirements.txt
llobot/: __init__.py  projects.py  text.py  time.py
llobot/chats/: __init__.py  _branches.py  _builders.py  _intents.py  _messages.py  _metadata.py  _roles.py  archives.py  binarization.py  branches.py  builder.py  builders.py  history.py  intent.py  intents.py  json.py  markdown.py  message.py  messages.py  monolithic.py  stream.py  thread.py
llobot/commands/: __init__.py  accept.py  approve.py  autonomy.py  chains.py  custom.py  cutoff.py  cutoffs.py  echo.py  knowledge.py  mentions.py  model.py  project.py  projects.py  retrievals.py  run.py  session.py  squash.py  unrecognized.py
llobot/contexts/: __init__.py  _contexts.py  deletions.py  deltas.py  documents.py  examples.py
llobot/crammers/: __init__.py  chain.py  deletions.py  edits.py  examples.py  indexes.py  knowledge.py
llobot/environments/: __init__.py  autonomy.py  command_queue.py  commands.py  context.py  cutoff.py  cutoffs.py  history.py  knowledge.py  memory.py  model.py  persistent.py  projects.py  prompt.py  replay.py  retrievals.py  seen.py  session.py  session_messages.py  sessions.py  status.py  tools.py
llobot/experts/: __init__.py  _experts.py  coder.md  coders.py  deltas.py  editor.md  editors.py  examples.py  instructions.py  java.py  junit.md  knowledge.py  memory.py  python.py  requests.py  rust.py  wrappers.py
scripts/: activate.sh  check.sh
tests/: mock_model.py  test_text.py
(+604 files in other folders)
